Disable metrics by default

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -61,12 +61,12 @@ podSecurityContext:
 
 metrics:
   # -- Enable metrics endpoint for prometheus
-  enabled: true
+  enabled: false
   # -- Worker metrics web server port
   workerPort: 9394
   serviceMonitor:
     # -- Enable serviceMonitor
-    enabled: true
+    enabled: false
     # -- Additional labels that can be used so ServiceMonitor resource(s) can be discovered by Prometheus
     additionalLabels: {}
     # -- Metrics scrape interval
