Create serviceMonitor crd before test deploy

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -21,3 +21,8 @@ env:
 image:
   repository: registry.gitlab.com/dependabot-gitlab/dependabot
   tag: master-latest
+
+metrics:
+  enabled: true
+  serviceMonitor:
+    enabled: true
