--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,6 +74,9 @@ jobs:
         run: |
           kubectl create namespace testing
           kubectl apply -f charts/dependabot-gitlab/ci/fake-gitlab.yaml -n testing
+      - name: Create serviceMonitor CDR
+        if: steps.changes.outputs.changed == 'true'
+        run: kubectl create -f https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/main/manifests/setup/prometheus-operator-0servicemonitorCustomResourceDefinition.yaml
       - name: Install
         if: steps.changes.outputs.changed == 'true'
         run: ct install --config .github/ct-install.yaml
