[dependabot-gitlab]: Add ServiceMonitor (#85)
* [dependabot-gitlab]: Add ServiceMonitor for worker pod

* update for fresh master

* Move serviceMonitor under metrics and fix ports

* Add additional schema location for kubeval

* Disable metrics by default

* Create serviceMonitor crd before test deploy

Co-authored-by: Daniil Kivenko <dkivenko@welltory.ru>
Co-authored-by: Andrejs Cunskis <andrejs.cunskis@gmail.com>

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -61,9 +61,22 @@ podSecurityContext:
 
 metrics:
   # -- Enable metrics endpoint for prometheus
-  enabled: true
+  enabled: false
   # -- Worker metrics web server port
   workerPort: 9394
+  serviceMonitor:
+    # -- Enable serviceMonitor
+    enabled: false
+    # -- Additional labels that can be used so ServiceMonitor resource(s) can be discovered by Prometheus
+    additionalLabels: {}
+    # -- Metrics scrape interval
+    scrapeInterval: 30s
+    # -- Metrics RelabelConfigs to apply to samples before scraping
+    relabellings: []
+    # -- Metrics RelabelConfigs to apply to samples before ingestion
+    metricRelabelings: []
+    # -- Specify honorLabels parameter to add the scrape endpoint
+    honorLabels: false
 
 web:
   # -- Web container replicas count
