--- a/charts/dependabot-gitlab/templates/deployment-web.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-web.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
 spec:
+  strategy: {{ toYaml .Values.web.updateStrategy | nindent 4 }}
   replicas: {{ .Values.web.replicaCount }}
   selector:
     matchLabels:
