Use separate service for metrics

--- a/charts/dependabot-gitlab/templates/deployment-web.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-web.yaml
@@ -44,7 +44,7 @@ spec:
                 name: {{ include "dependabot-gitlab.fullname" . }}
           ports:
             - name: http
-              containerPort: 3000
+              containerPort: {{ .Values.service.port }}
               protocol: TCP
           {{- if .Values.web.livenessProbe.enabled }}
           livenessProbe:
