--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -3,6 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
 data:
+  PORT: {{ .Values.service.port }}
   RAILS_ENV: production
   RAILS_SERVE_STATIC_FILES: "true"
   SECRET_KEY_BASE: key
