--- a/charts/dependabot-gitlab/templates/metrics-svc.yaml
+++ b/charts/dependabot-gitlab/templates/metrics-svc.yaml
@@ -1,21 +1,26 @@
+{{- if .Values.metrics.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "dependabot-gitlab.fullname" . }}
+  name: {{ include "dependabot-gitlab.fullname" . }}-metrics
   labels:
-    app.kubernetes.io/component: web
+    app.kubernetes.io/component: metrics
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
   {{- with .Values.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  type: {{ .Values.service.type }}
+  type: {{ .Values.metrics.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
-      name: http
+      name: web
+    - port: {{ .Values.metrics.workerPort }}
+      targetPort: metrics
+      protocol: TCP
+      name: worker
   selector:
-    app.kubernetes.io/component: web
     {{- include "dependabot-gitlab.selectorLabels" . | nindent 4 }}
+{{- end }}
