Quote port number in configmap

--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -3,10 +3,10 @@ kind: ConfigMap
 metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
 data:
-  PORT: {{ .Values.service.port }}
   RAILS_ENV: production
   RAILS_SERVE_STATIC_FILES: "true"
   SECRET_KEY_BASE: key
+  PORT: {{ .Values.service.port | quote }}
   SETTINGS__GITLAB_URL: {{ .Values.env.gitlabUrl | quote }}
   SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | quote }}
   SETTINGS__LOG_LEVEL: {{ .Values.env.logLevel }}
