Use separate service for metrics (#88)
* Use separate service for metrics

* Quote port number in configmap

--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -6,6 +6,7 @@ data:
   RAILS_ENV: production
   RAILS_SERVE_STATIC_FILES: "true"
   SECRET_KEY_BASE: key
+  PORT: {{ .Values.service.port | quote }}
   SETTINGS__GITLAB_URL: {{ .Values.env.gitlabUrl | quote }}
   SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | quote }}
   SETTINGS__LOG_LEVEL: {{ .Values.env.logLevel }}
