dependabot-gitlab: add support for imagePullSecrets

--- a/charts/dependabot-gitlab/templates/migration-job.yaml
+++ b/charts/dependabot-gitlab/templates/migration-job.yaml
@@ -44,3 +44,7 @@ spec:
             - secretRef:
                 name: {{ include "dependabot-gitlab.fullname" . }}
       restartPolicy: Never
+      {{- with .Values.image.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 6 }}
+      {{- end}}
