--- a/charts/dependabot-gitlab/templates/registration-job.yaml
+++ b/charts/dependabot-gitlab/templates/registration-job.yaml
@@ -35,5 +35,9 @@ spec:
                 name: {{ include "dependabot-gitlab.fullname" . }}
             - secretRef:
                 name: {{ include "dependabot-gitlab.fullname" . }}
+          {{- with .Values.createProjectsJob.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
       restartPolicy: Never
 {{- end }}
