Add cleanup ttl for jobs

--- a/charts/dependabot-gitlab/templates/registration-job.yaml
+++ b/charts/dependabot-gitlab/templates/registration-job.yaml
@@ -8,6 +8,7 @@ metadata:
   annotations:
     helm.sh/hook: post-install,post-upgrade
 spec:
+  ttlSecondsAfterFinished: 3600
   # migrations wait has built in wait so try only once
   backoffLimit: 1
   activeDeadlineSeconds: {{ .Values.createProjectsJob.activeDeadlineSeconds }}
