dependabot-gitlab: add support for imagePullSecrets (#90)
* dependabot-gitlab: add support for imagePullSecrets

* dependabot-gitlab: remove unnecessary whitespace

* dependabot-gitlab: fix linter issue

Co-authored-by: Dorian de Koning <dorian@weave.nl>
Co-authored-by: Andrejs Cunskis <andrejs.cunskis@gmail.com>

--- a/charts/dependabot-gitlab/templates/registration-job.yaml
+++ b/charts/dependabot-gitlab/templates/registration-job.yaml
@@ -41,4 +41,8 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       restartPolicy: Never
-{{- end }}
+      {{- with .Values.image.imagePullSecrets }}
+      imagePullSecrets:
+      {{- toYaml . | nindent 6 }}
+      {{- end}}
+  {{- end }}
