--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -6,6 +6,9 @@ image:
   # -- Image tag
   tag: ""
 
+  # -- Image pull secrets specification
+  imagePullSecrets:
+
 kubectlImage:
   # -- Image to use for kubectl init containers
   repository: bitnami/kubectl
