--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-name: buildkit-service
-description: Helm chart for buildkit service deployment
-type: application
-version: 0.0.12
 appVersion: v0.9.1
+description: Helm chart for buildkit service deployment
 icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/charts/buildkit-service/icon.png
 maintainers:
-  - name: Andrejs Cunskis
-    email: andrejs.cunskis@gmail.com
+- email: andrejs.cunskis@gmail.com
+  name: Andrejs Cunskis
+name: buildkit-service
+type: application
+version: 0.0.13
