--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -169,6 +169,8 @@ env:
   gitlabUrl: https://gitlab.com
   # -- Optional sentry dsn for error reporting
   sentryDsn: ""
+  # -- Sentry traces sample rate
+  sentryTracesSampleRate: ""
   # -- Optional app url, used for automated webhook creation
   dependabotUrl: ""
   # -- Configuration path
