--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -18,6 +18,9 @@ spec:
         app.kubernetes.io/component: worker
       annotations:
         {{- include "dependabot-gitlab.podAnnotations" . | nindent 8 }}
+        {{- with .Values.worker.podAnnotations }}
+        {{ toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       serviceAccountName: {{ include "dependabot-gitlab.serviceAccountName" . }}
       {{- with .Values.podSecurityContext }}
@@ -93,15 +96,15 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       terminationGracePeriodSeconds: 300 # Large dependency files or docker images can take long time to process
-      {{- with .Values.nodeSelector }}
+      {{- with .Values.worker.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.affinity }}
+      {{- with .Values.worker.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.tolerations }}
+      {{- with .Values.worker.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
