--- a/charts/dependabot-gitlab/templates/migration-job.yaml
+++ b/charts/dependabot-gitlab/templates/migration-job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{- include "dependabot-gitlab.migrationJobName" . | trunc 63 | trimSuffix "-" }}"
+  name: {{ include "dependabot-gitlab.fullname" . }}-migration-job
   labels:
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
 spec:
