--- a/charts/dependabot-gitlab/Chart.yaml
+++ b/charts/dependabot-gitlab/Chart.yaml
@@ -9,7 +9,7 @@ dependencies:
   name: mongodb
   repository: https://charts.bitnami.com/bitnami
   version: ~10.23.0
-description: Deployment chart for dependabot-gitlab app
+description: DEPRECATED Deployment chart for dependabot-gitlab app
 icon: https://gitlab.com/dependabot-gitlab/dependabot/-/raw/master/logo.png
 maintainers:
 - email: andrejs.cunskis@gmail.com
