--- a/charts/smocker/Chart.yaml
+++ b/charts/smocker/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: v0.17.1
+appVersion: 0.17.1
 description: Helm chart for smocker mock service deployment
 icon: https://raw.githubusercontent.com/andrcuns/buildkit-chart/master/charts/smocker/icon.png
 maintainers:
