--- a/charts/buildkit-service/Chart.yaml
+++ b/charts/buildkit-service/Chart.yaml
@@ -1,3 +1,9 @@
+annotations:
+  artifacthub.io/links: |
+    - name: source
+      url: https://github.com/andrcuns/charts
+    - name: support
+      url: https://github.com/andrcuns/charts/issues
 apiVersion: v2
 appVersion: v0.9.1
 description: Helm chart for buildkit service deployment
