--- a/charts/smocker/Chart.yaml
+++ b/charts/smocker/Chart.yaml
@@ -1,3 +1,9 @@
+annotations:
+  artifacthub.io/links: |
+    - name: source
+      url: https://github.com/andrcuns/charts
+    - name: support
+      url: https://github.com/andrcuns/charts/issues
 apiVersion: v2
 appVersion: 0.17.1
 description: Helm chart for smocker mock service deployment
