Add smocker mock server deployment chart (#109)
* Add smocker mock server deployment

* Add artifacthub annotations

* Add artifacthub badge

* Add release notes configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.1.0
       - name: Lint
-        run: ct lint --config .github/ct-lint.yaml --check-version-increment=false
+        run: ct lint --config .github/config/ct-lint.yaml --check-version-increment=false
       - name: Lint docs
         run: .github/script/helm-docs.sh
 
@@ -69,14 +69,6 @@ jobs:
       - name: Create kind cluster
         if: steps.changes.outputs.changed == 'true'
         uses: helm/kind-action@v1.2.0
-      - name: Deploy fake gitlab
-        if: steps.changes.outputs.changed == 'true'
-        run: |
-          kubectl create namespace testing
-          kubectl apply -f charts/dependabot-gitlab/ci/fake-gitlab.yaml -n testing
-      - name: Create serviceMonitor CDR
-        if: steps.changes.outputs.changed == 'true'
-        run: kubectl create -f https://raw.githubusercontent.com/prometheus-operator/kube-prometheus/main/manifests/setup/prometheus-operator-0servicemonitorCustomResourceDefinition.yaml
       - name: Install
         if: steps.changes.outputs.changed == 'true'
-        run: ct install --config .github/ct-install.yaml
+        run: ct install --config .github/config/ct-install.yaml
