Fix release lin job

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.1.0
       - name: Lint
-        run: ct lint --config .github/ct-lint.yaml
+        run: ct lint --config .github/config/ct-lint.yaml
       - name: Lint docs
         run: .github/script/helm-docs.sh
 
