--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,3 +47,4 @@ jobs:
         uses: helm/chart-releaser-action@v1.2.1
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: "true"
