--- a/charts/smocker/templates/configmap.yaml
+++ b/charts/smocker/templates/configmap.yaml
@@ -8,7 +8,7 @@ data:
   start.sh: |
     #!/bin/bash
 
-    set -m
+    set -me
 
     mock_server="localhost:8081"
 
@@ -25,7 +25,7 @@ data:
       curl -sSf -XPOST \
         --header "Content-Type: application/x-yaml" \
         --data "${MOCKS}" \
-        "${mock_server}/mocks"
+        "${mock_server}/mocks?reset=true"
     }
 
     # Start the primary process and put it in the background
