--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -15,7 +15,6 @@ spec:
       annotations:
         {{- if .Values.rootless }}
         container.apparmor.security.beta.kubernetes.io/{{ .Chart.Name }}: unconfined
-        container.seccomp.security.alpha.kubernetes.io/{{ .Chart.Name }}: unconfined
         {{- end }}
         {{- with .Values.podAnnotations -}}
         {{ toYaml . | nindent 8 }}
@@ -72,6 +71,8 @@ spec:
             periodSeconds: 30
           securityContext:
           {{- if .Values.rootless }}
+            seccompProfile: # Needs Kubernetes >= 1.19
+              type: Unconfined
             runAsUser: 1000
             runAsGroup: 1000
           {{- else }}
@@ -79,8 +80,10 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
-      {{- if .Values.tls.enabled }}
       volumes:
+      - name: buildkitd
+        emptyDir: {}
+      {{- if .Values.tls.enabled }}
       - name: certs
         secret:
           secretName: {{ include "buildkit.fullname" . }}
