--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
       - .github/**/*
 
 env:
-  KUBEVAL_VERSION: "0.16.1"
+  KUBECONFORM_VERSION: "0.4.14"
   HELMDOCS_VERSION: "1.5.0"
 
 jobs:
@@ -35,7 +35,7 @@ jobs:
       - name: Lint docs
         run: .github/script/helm-docs.sh
 
-  kubeval:
+  kubeconform:
     runs-on: ubuntu-20.04
     needs:
       - lint
@@ -44,8 +44,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Run kubeval
-        run: .github/script/kubeval.sh
+      - name: Run kubeconform
+        run: .github/script/kubeconform.sh
 
   install:
     runs-on: ubuntu-20.04
