--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -36,7 +36,7 @@ jobs:
         run: .github/script/helm-docs.sh
 
   kubeconform:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs:
       - lint
     steps:
@@ -48,10 +48,10 @@ jobs:
         run: .github/script/kubeconform.sh
 
   install:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs:
       - lint
-      - kubeval
+      - kubeconform
     steps:
       - name: Checkout
         uses: actions/checkout@v3
